update component "modal"

--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -17,15 +17,13 @@
             </a>
             <div class="p-4">
                 <div class="modal">
-                    <div class="modal__header">
-                        <h3 class="modal__title">Demo Modal</h3>
-                    </div>
+                    <div class="modal__header">Demo Modal</div>
                     <div class="modal__body">
                         {{ content }}
                     </div>
                     <div class="modal__footer">
-                        <button class="button button--large button--dark fl-r">OK</button>
-                        <span class="button button--large button--light button--flat fl-r m-r-1" yoi-action="closeModal">Cancel</span>
+                        <button class="button button--flat button--dark fl-r">Do Something</button>
+                        <span class="button button--flat button--light fl-r m-r-1" yoi-action="closeModal">Cancel</span>
                     </div>
                 </div>
             </div>
