update component "box"

--- a/src/components/box/box.less
+++ b/src/components/box/box.less
@@ -14,8 +14,6 @@
     font-family: @font-sansserif;
     position: relative;
 
-    //overflow: hidden;
-
     a& {
         text-decoration: none;
     }
@@ -54,7 +52,7 @@
 
 .box__body {
 
-    padding: 10px;
+    padding: 1rem;
     position: relative;
 
     p {
