update page navigation components (pageprogress, pagerewind, pageskim)
renamed scrollprogress to pageprogress and scrollkeys to pageskim

--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -41,6 +41,7 @@
     .mixin-clearAppearance;
     .mixin-defaultBorderRadius;
     .mixin-userSelectNone;
+    .mixin-fw-bold;
     background-clip: padding-box;
     border-width: @button-borderwidth;
     border-style: solid;
@@ -49,7 +50,6 @@
     display: inline-block;
     font-family: @font-sansserif;
     font-size: @button-fontsize;
-    font-weight: bold;
     height: @button-height;
     line-height: @button-lineheight;
     padding: 0 @button-xpadding;
