--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -33,16 +33,16 @@
             }
         </style>
     </head>
-    {% if page.title contains "ScrollProgress" %}
-        {% assign scrollProgress = "yoi-scrollprogress" %}
+    {% if page.title contains "PageProgress" %}
+        {% assign pageProgress = "yoi-pageprogress" %}
     {% endif %}
-    {% if page.title contains "ScrollKeys" %}
-        {% assign scrollKeys = "yoi-scrollkeys" %}
+    {% if page.title contains "PageSkim" %}
+        {% assign pageSkim = "yoi-pageskim" %}
     {% endif %}
     {% if page.title contains "PageRewind" %}
         {% assign pageRewind = "yoi-pagerewind" %}
     {% endif %}
-    <body class="noJs" yoi-environment="desktop" {{ pageRewind }} {{ scrollKeys }} {{ scrollProgress }} >
+    <body class="noJs" yoi-environment="desktop" {{ pageRewind }} {{ pageSkim }} {{ pageProgress }} >
         <script>document.body.className='js';</script>
         {% include metamenu.html %}
         <div class="wrapper flx m-t-10">
