--- a/src/components/pageprogress/pageprogress.less
+++ b/src/components/pageprogress/pageprogress.less
@@ -1,9 +1,9 @@
-/** scrollprogress.less */
+/** pageprogress.less */
 
 // block
 // =====
 
-.scrollProgress {
+.pageProgress {
     background: fade(@color-base-5,15%);
     height: .25rem;
     left: 0;
@@ -16,7 +16,7 @@
 // elements
 // ========
 
-.scrollProgress__track {
+.pageProgress__track {
     background: @color-base-8;
     bottom: 0;
     left: 0;
