fix search input

--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -11,7 +11,7 @@
         {% else %}
             {% if jekyll.environment == "production" %}
                 <form class="pos-relative">
-                    <input id="docsearch-input" class="w-18 m:w-30 input--rounded z-200" type="search" autocomplete="off" />
+                    <input id="docsearch-input" class="w-18 m:w-30 input input--rounded z-200" type="search" autocomplete="off" />
                 </form>
             {% endif %}
             <a href="#menu" class="button button--subtle m-l-2 l:hidden" yoi-action="ScrollTo:#menu;">
