--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -7,7 +7,8 @@
     <p class="flx-grow al-r fs-0">
         {% if page.title == 'Index' %}
             <a href="{{ site.github.url }}/start/" class="button button--small button--subtle m-l-2">Documentation</a>
-            <a href="{{ site.github.zip_url }}" class="button button--small button--subtle m-l-2">Github</a>
+            <a href="https://github.com/yoshino-digital/yoi" class="button button--small button--subtle m-l-2">Github</a>
+            {% comment %}{{ site.github.zip_url }}{% endcomment %}
         {% else %}
             {% if jekyll.environment == "production" %}
                 <form class="pos-relative">
