drop bower, fix documentation

--- a/docs/_includes/pagefooter.html
+++ b/docs/_includes/pagefooter.html
@@ -1,6 +1,9 @@
 <footer class="c-base-15">
-    <p class="d-inlineblock fs-2 p-4">
+    <p class="d-inlineblock fs-2 p-tb-2 m-l-2">
         <span>&copy; {{ "now" | date: "%Y" }}</span>
-        <a class="" href="http://yoshino.digital">Yoshino.digital GmbH</a>
+        <a class="tdr-none hvr:tdr-underline" href="http://yoshino.digital">Yoshino.digital GmbH</a>
+    </p>
+    <p class="d-inlineblock fs-2 p-tb-2 m-l-2">
+        <a class="tdr-none hvr:tdr-underline" href="http://yoshino.digital">Github</a>
     </p>
 </footer>
