--- a/src/less/utilities/color-interactive.less
+++ b/src/less/utilities/color-interactive.less
@@ -5,69 +5,69 @@
 
     // semantic background colors
 
-    .hvr--bg-attention-@{i}:hover { background: ~"@{color-attention-@{i}}" !important; }
-    .hvr--bg-base-@{i}:hover      { background: ~"@{color-base-@{i}}" !important; }
-    .hvr--bg-negative-@{i}:hover  { background: ~"@{color-negative-@{i}}" !important; }
-    .hvr--bg-positive-@{i}:hover  { background: ~"@{color-positive-@{i}}" !important; }
-    .hvr--bg-primary-@{i}:hover   { background: ~"@{color-primary-@{i}}" !important; }
-    
+    .hvr\:bg-attention-@{i}:hover { background: ~"@{color-attention-@{i}}" !important; }
+    .hvr\:bg-base-@{i}:hover      { background: ~"@{color-base-@{i}}" !important; }
+    .hvr\:bg-negative-@{i}:hover  { background: ~"@{color-negative-@{i}}" !important; }
+    .hvr\:bg-positive-@{i}:hover  { background: ~"@{color-positive-@{i}}" !important; }
+    .hvr\:bg-primary-@{i}:hover   { background: ~"@{color-primary-@{i}}" !important; }
+
     // additional background colors
-    
-    .hvr--bg-blue-@{i}:hover when (@fullColorPalette = true)   { background: ~"@{color-blue-@{i}}" !important; }
-    .hvr--bg-gray-@{i}:hover when (@fullColorPalette = true)   { background: ~"@{color-gray-@{i}}" !important; }
-    .hvr--bg-green-@{i}:hover when (@fullColorPalette = true)  { background: ~"@{color-green-@{i}}" !important; }
-    .hvr--bg-purple-@{i}:hover when (@fullColorPalette = true) { background: ~"@{color-purple-@{i}}" !important; }
-    .hvr--bg-red-@{i}:hover when (@fullColorPalette = true)    { background: ~"@{color-red-@{i}}" !important; }
-    .hvr--bg-yellow-@{i}:hover when (@fullColorPalette = true) { background: ~"@{color-yellow-@{i}}" !important; }
-    
+
+    .hvr\:bg-blue-@{i}:hover when (@fullColorPalette = true)   { background: ~"@{color-blue-@{i}}" !important; }
+    .hvr\:bg-gray-@{i}:hover when (@fullColorPalette = true)   { background: ~"@{color-gray-@{i}}" !important; }
+    .hvr\:bg-green-@{i}:hover when (@fullColorPalette = true)  { background: ~"@{color-green-@{i}}" !important; }
+    .hvr\:bg-purple-@{i}:hover when (@fullColorPalette = true) { background: ~"@{color-purple-@{i}}" !important; }
+    .hvr\:bg-red-@{i}:hover when (@fullColorPalette = true)    { background: ~"@{color-red-@{i}}" !important; }
+    .hvr\:bg-yellow-@{i}:hover when (@fullColorPalette = true) { background: ~"@{color-yellow-@{i}}" !important; }
+
     // semantic text colors
 
-    .hvr--c-attention-@{i}:hover { color: ~"@{color-attention-@{i}}" !important; }
-    .hvr--c-base-@{i}:hover      { color: ~"@{color-base-@{i}}" !important; }
-    .hvr--c-negative-@{i}:hover  { color: ~"@{color-negative-@{i}}" !important; }
-    .hvr--c-positive-@{i}:hover  { color: ~"@{color-positive-@{i}}" !important; }
-    .hvr--c-primary-@{i}:hover   { color: ~"@{color-primary-@{i}}" !important; }
-    
+    .hvr\:c-attention-@{i}:hover { color: ~"@{color-attention-@{i}}" !important; }
+    .hvr\:c-base-@{i}:hover      { color: ~"@{color-base-@{i}}" !important; }
+    .hvr\:c-negative-@{i}:hover  { color: ~"@{color-negative-@{i}}" !important; }
+    .hvr\:c-positive-@{i}:hover  { color: ~"@{color-positive-@{i}}" !important; }
+    .hvr\:c-primary-@{i}:hover   { color: ~"@{color-primary-@{i}}" !important; }
+
     // additional text colors
-    
-    .hvr--c-blue-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{color-blue-@{i}}" !important; }
-    .hvr--c-gray-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{color-gray-@{i}}" !important; }
-    .hvr--c-green-@{i}:hover when (@fullColorPalette = true)  { color: ~"@{color-green-@{i}}" !important; }
-    .hvr--c-purple-@{i}:hover when (@fullColorPalette = true) { color: ~"@{color-purple-@{i}}" !important; }
-    .hvr--c-red-@{i}:hover when (@fullColorPalette = true)    { color: ~"@{color-red-@{i}}" !important; }
-    .hvr--c-yellow-@{i}:hover when (@fullColorPalette = true) { color: ~"@{color-yellow-@{i}}" !important; }
-    
+
+    .hvr\:c-blue-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{color-blue-@{i}}" !important; }
+    .hvr\:c-gray-@{i}:hover when (@fullColorPalette = true)   { color: ~"@{color-gray-@{i}}" !important; }
+    .hvr\:c-green-@{i}:hover when (@fullColorPalette = true)  { color: ~"@{color-green-@{i}}" !important; }
+    .hvr\:c-purple-@{i}:hover when (@fullColorPalette = true) { color: ~"@{color-purple-@{i}}" !important; }
+    .hvr\:c-red-@{i}:hover when (@fullColorPalette = true)    { color: ~"@{color-red-@{i}}" !important; }
+    .hvr\:c-yellow-@{i}:hover when (@fullColorPalette = true) { color: ~"@{color-yellow-@{i}}" !important; }
+
     // semantic border colors
 
-    .hvr--bc-attention-@{i}:hover { border-color: ~"@{color-attention-@{i}}" !important; }
-    .hvr--bc-base-@{i}:hover      { border-color: ~"@{color-base-@{i}}" !important; }
-    .hvr--bc-negative-@{i}:hover  { border-color: ~"@{color-negative-@{i}}" !important; }
-    .hvr--bc-positive-@{i}:hover  { border-color: ~"@{color-positive-@{i}}" !important; }
-    .hvr--bc-primary-@{i}:hover   { border-color: ~"@{color-primary-@{i}}" !important; }
-    
+    .hvr\:bc-attention-@{i}:hover { border-color: ~"@{color-attention-@{i}}" !important; }
+    .hvr\:bc-base-@{i}:hover      { border-color: ~"@{color-base-@{i}}" !important; }
+    .hvr\:bc-negative-@{i}:hover  { border-color: ~"@{color-negative-@{i}}" !important; }
+    .hvr\:bc-positive-@{i}:hover  { border-color: ~"@{color-positive-@{i}}" !important; }
+    .hvr\:bc-primary-@{i}:hover   { border-color: ~"@{color-primary-@{i}}" !important; }
+
     // additional border colors
-    
-    .hvr--bc-blue-@{i}:hover when (@fullColorPalette = true)   { border-color: ~"@{color-blue-@{i}}" !important; }
-    .hvr--bc-gray-@{i}:hover when (@fullColorPalette = true)   { border-color: ~"@{color-gray-@{i}}" !important; }
-    .hvr--bc-green-@{i}:hover when (@fullColorPalette = true)  { border-color: ~"@{color-green-@{i}}" !important; }
-    .hvr--bc-purple-@{i}:hover when (@fullColorPalette = true) { border-color: ~"@{color-purple-@{i}}" !important; }
-    .hvr--bc-red-@{i}:hover when (@fullColorPalette = true)    { border-color: ~"@{color-red-@{i}}" !important; }
-    .hvr--bc-yellow-@{i}:hover when (@fullColorPalette = true) { border-color: ~"@{color-yellow-@{i}}" !important; }
+
+    .hvr\:bc-blue-@{i}:hover when (@fullColorPalette = true)   { border-color: ~"@{color-blue-@{i}}" !important; }
+    .hvr\:bc-gray-@{i}:hover when (@fullColorPalette = true)   { border-color: ~"@{color-gray-@{i}}" !important; }
+    .hvr\:bc-green-@{i}:hover when (@fullColorPalette = true)  { border-color: ~"@{color-green-@{i}}" !important; }
+    .hvr\:bc-purple-@{i}:hover when (@fullColorPalette = true) { border-color: ~"@{color-purple-@{i}}" !important; }
+    .hvr\:bc-red-@{i}:hover when (@fullColorPalette = true)    { border-color: ~"@{color-red-@{i}}" !important; }
+    .hvr\:bc-yellow-@{i}:hover when (@fullColorPalette = true) { border-color: ~"@{color-yellow-@{i}}" !important; }
 
 }
 .generate_hvrStyles(25);
 
 // achromatic background colors
 
-.hvr--bg-transparent:hover { .bg-transparent; }
-.hvr--bg-white:hover       { .bg-white; }
+.hvr\:bg-transparent:hover { .bg-transparent; }
+.hvr\:bg-white:hover       { .bg-white; }
 
 // achromatic text colors
 
-.hvr--c-transparent:hover { .c-transparent; }
-.hvr--c-white:hover       { .c-white; }
+.hvr\:c-transparent:hover { .c-transparent; }
+.hvr\:c-white:hover       { .c-white; }
 
 // achromatic border colors
 
-.hvr--bc-transparent:hover { .bc-transparent; }
-.hvr--bc-white:hover       { .bc-white; }
+.hvr\:bc-transparent:hover { .bc-transparent; }
+.hvr\:bc-white:hover       { .bc-white; }
