--- a/src/less/utilities/opacity-interactive.less
+++ b/src/less/utilities/opacity-interactive.less
@@ -1,14 +1,14 @@
 /** op-interactive.less */
 
-.hvr--op-opaque:hover { .op-opaque; }
-.hvr--op-transparent:hover { .op-transparent; }
+.hvr\:op-opaque:hover { .op-opaque; }
+.hvr\:op-transparent:hover { .op-transparent; }
 
-.hvr--op-9:hover    { .op-9; }
-.hvr--op-8:hover    { .op-8; }
-.hvr--op-7:hover    { .op-7; }
-.hvr--op-6:hover    { .op-6; }
-.hvr--op-5:hover    { .op-5; }
-.hvr--op-4:hover    { .op-4; }
-.hvr--op-3:hover    { .op-3; }
-.hvr--op-2:hover    { .op-2; }
-.hvr--op-1:hover    { .op-1; }
+.hvr\:op-9:hover    { .op-9; }
+.hvr\:op-8:hover    { .op-8; }
+.hvr\:op-7:hover    { .op-7; }
+.hvr\:op-6:hover    { .op-6; }
+.hvr\:op-5:hover    { .op-5; }
+.hvr\:op-4:hover    { .op-4; }
+.hvr\:op-3:hover    { .op-3; }
+.hvr\:op-2:hover    { .op-2; }
+.hvr\:op-1:hover    { .op-1; }
