--- a/src/less/utilities/typography-interactive.less
+++ b/src/less/utilities/typography-interactive.less
@@ -1,4 +1,4 @@
 /** typography-interactive.less */
 
-.hvr--tdr-none:hover      { .tdr-none; }
-.hvr--tdr-underline:hover { .tdr-underline; }
+.hvr\:tdr-none:hover      { .tdr-none; }
+.hvr\:tdr-underline:hover { .tdr-underline; }
