--- a/src/components/pagedots/pagedots.less
+++ b/src/components/pagedots/pagedots.less
@@ -57,11 +57,11 @@
     border-radius: 50%;
     content: ' ';
     display: block;
-    height: 1rem;
-    margin-left: .25rem;
+    height: .5rem;
+    margin-left: .5rem;
     position: absolute;
-    top: .25rem;
-    width: 1rem;
+    top: .5rem;
+    width: .5rem;
 }
 
 .pageDots__dot::after {
