add overflow-wrap to .container

--- a/src/less/utilities/layout-base.less
+++ b/src/less/utilities/layout-base.less
@@ -62,6 +62,7 @@
     box-sizing: border-box !important;
     margin: 0 auto !important;
     max-width: @maximumPageWrapperWidth !important;
+    overflow-wrap: break-word !important;
     padding: 0 2rem !important;
     position: relative !important;
     width: 100% !important;
