--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -1,22 +1,15 @@
-<div class="p-3 flx">
-    <p class="flx-grow">
+<div class="p-3 flx flx-noWrap flx-justifySpaceBetween">
+    <p>
         <a class="tdr-none c-base-10" href="{{ site.github.url }}/">
             <img class="h-4 val-t" src="{{ site.github.url }}/assets/img/logo-yoi.svg" />
         </a>
     </p>
-    <p class="flx-grow al-r fs-0">
-        {% if page.title == 'Index' %}
-        {% else %}
-            {% if jekyll.environment == "production" %}
-                <form class="pos-relative">
-                    <input id="docsearch-input" class="w-18 m:w-30 input input--rounded z-200" type="search" autocomplete="off" />
-                </form>
-            {% endif %}
-            <a href="#menu" class="button button--subtle m-l-2 l:hidden" yoi-action="ScrollTo:#menu;">
-                <span class="hidden">Menu</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" stroke="#000000" stroke-width="2px" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid"><path d="M0,5 L24,5 L24,7 L0,7 L0,5 Z M0,11 L24,11 L24,13 L0,13 L0,11 Z M0,17 L24,17 L24,19 L0,19 L0,17 Z"></path></svg>
-            </a>
-        {% endif %}
+    {% if page.title != 'Index' and jekyll.environment == "production" %}
+        <form class="flx-grow pos-relative p-lr-1 al-r">
+            <input id="docsearch-input" class="w-1-1 m:w-1-3 input input--rounded z-200" type="search" autocomplete="off" />
+        </form>
+    {% endif %}
+    <p class="l:hidden">
+        <a href="#menu" class="button button--small button--subtle" yoi-action="ScrollTo:#menu;">Menu</a>
     </p>
 </div>
-
