--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -6,7 +6,7 @@
     </p>
     {% if page.title != 'Index' and jekyll.environment == "production" %}
         <form class="flx-grow pos-relative p-lr-1 al-r">
-            <input id="docsearch-input" class="w-1-1 m:w-1-3 input input--rounded z-200" type="search" autocomplete="off" />
+            <input id="docsearch-input" class="input input--rounded z-200" type="search" autocomplete="off" />
         </form>
     {% endif %}
     <p class="l:hidden">
