--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -9,7 +9,7 @@
             <input id="docsearch-input" class="input input--rounded z-200" type="search" autocomplete="off" />
         </form>
     {% endif %}
-    <p class="l:hidden">
+    <p class="l:hidden l:p-0 p-l-1">
         <a href="#menu" class="button button--small button--subtle" yoi-action="ScrollTo:#menu;">Menu</a>
     </p>
 </div>
